# real-time-hand-gesture-detection

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  sample.env  start.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci_pipeline.yaml
experiments/: health_check.ipynb  test.ipynb
gesture_detection/: baseline_.py  cli.py  inference.py  slurm.py  train.py
gesture_detection/callbacks/: model_summary.py
gesture_detection/config/: base_config.py  base_logger.py
gesture_detection/config/model_config/: baseline.yaml  lstm.yaml  resnet_test.yaml
gesture_detection/config/model_config/exp_A/: desc.txt  lstm.yaml
gesture_detection/config/model_config/exp_B/: desc.txt
gesture_detection/config/model_config/exp_C/: desc.txt  lstm.yaml
gesture_detection/config/model_config/exp_D/: desc.txt
gesture_detection/config/model_config/exp_E/: desc.txt
gesture_detection/config/model_config/exp_F/: desc.txt  lstm.yaml
gesture_detection/config/model_config/exp_G/: desc.txt  lstm.yaml
gesture_detection/config/model_config/exp_H/: desc.txt  lstm.yaml
gesture_detection/config/model_config/exp_I/: desc.txt
gesture_detection/config/model_config/exp_J/: desc.txt
gesture_detection/config/model_config/exp_K/: desc.txt  lstm.yaml
gesture_detection/config/model_config/exp_L/: desc.txt  lstm.yaml
gesture_detection/config/model_config/exp_M/: desc.txt  lstm.yaml
gesture_detection/config/model_config/exp_N/: desc.txt  lstm.yaml
gesture_detection/config/model_config/exp_O/: desc.txt  lstm.yaml
gesture_detection/config/model_config/slurm/: 0.yaml  1.yaml  2.yaml  3.yaml  4.yaml  5.yaml  6.yaml  7.yaml
gesture_detection/datasets/: cifar10.py  h5dataset.py  ipn.py
gesture_detection/models/: baseline.py  lstm.py  resnet_lstm.py  resnet_test.py
gesture_detection/utility/: SequenceMetric.py  find_num_worker_default.py  log_pytorch_info.py  log_torch_info.py  plot_confusion_matrix.py  style_training_output.py
src/: baseline.py  cli.py  train.py  training.py
src/callbacks/: progress_bar.py  run_printer.py
src/config/: base_config.py  base_logger.py
src/config/logging/: formatter.py  logger.py
src/config/model_config/: resnet_test.yaml
src/data_modules/: cifar10.py
src/dataclasses/: ipn.py
src/datasets/: cifar10.py
src/models/: resnet_test.py
src/utility/: find_num_worker_default.py  log_pytorch_info.py  log_pytorch_info.py.py  log_torch_info.py
tests/: conftest.py  test_example.py
tests/unit_tests/: test_base_config.py
(+49 files in other folders)
