[tool.poetry]
name = "Real Time Hand Gesture Detection"
version = "0.1.0"
description = "Real time hand gesture detection"
authors = ["Reinhud"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
pydantic-settings = "^2.1.0"
accelerate = "^0.20.3"
colorlog = "^6.7.0"
pytorch-accelerated = "^0.1.47"
matplotlib = "^3.8.2"
torchvision = "^0.16.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.11.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pre-commit = "^3.5.0"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 110

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 110

[tool.pytest.ini_options]
pythonpath  = ["src"]